# OEM

./: .gitignore  generate_prompt.py  main.py  pyproject.toml  requirements.txt  upload_assistant.py  workflow.py
routers/: customer_support.py  oem_config.py  session_state.py  ticket.py  upload_assistant.py  workflow.py
utils/: mongo.py
