[project]
name = "enterprise-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.9.0",
    "asyncpg>=0.30.0",
    "beautifulsoup4>=4.12.0",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "fastapi>=0.115.13",
    "fitz>=0.0.1.dev2",
    "lxml>=4.9.0",
    "motor>=3.3.0",
    "numpy>=1.24.0",
    "openai>=1.91.0",
    "pandas>=2.3.0",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.7",
    "psutil>=5.9.0",
    "pydantic>=2.11.7",
    "pymupdf>=1.26.3",
    "pytesseract>=0.3.13",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=0.9.9",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "twilio>=7.0.0",
    "uvicorn[standard]>=0.34.3",
    "weaviate-client>=4.15.4",
]
